feat: add development user identity
